
job_step_create_response_msg_t
	select_jobinfo		data needed from the select plugin for a step

partition_info_t
	grace_time		preempted job's grace time in seconds

slurm_ctl_conf
	max_job_id		maximum supported job id before starting over
				with first_job_id
	max_step_count		maximum number of job steps permitted per job

slurm_step_layout
	front_end		name of front end host running the step

slurmdb_qos_rec_t
	grace_time		preempted job's grace time in seconds

update_front_end_msg_t		entirely new structure


Changed the following enums and #defines
========================================
job_state_reason
	FAIL_BANK_ACCOUNT -> FAIL_ACCOUNT
	FAIL_QOS        	/* invalid QOS */
	WAIT_QOS_THRES        	/* required QOS threshold has been breached */

select_jobdata_type
	SELECT_JOBDATA_PTR	 /* data-> select_jobinfo_t *jobinfo */
	SELECT_JOBDATA_BLOCK_PTR /* data-> bg_record_t *bg_record */
	SELECT_JOBDATA_DIM_CNT   /* data-> uint16_t dim_cnt */

select_nodedata_type
	SELECT_NODEDATA_PTR     /* data-> select_nodeinfo_t *nodeinfo */

select_type_plugin_info is no longer and it's contents are now mostly #defines

DEBUG_FLAG_FRONT_END		added DebugFlags of Frontend

JOB_PREEMPTED			added new job termination state to indicated
				job termination was due to preemption

RESERVE_FLAG_LIC_ONLY		reserve licenses only, use any nodes

TRIGGER_RES_TYPE_FRONT_END	added trigger for frontend state changes


Added the following API's
=========================
slurm_free_front_end_info_msg	free front end state information
slurm_init_update_front_end_msg	initialize data structure for front end update
slurm_load_front_end()		load front end state information
slurm_print_front_end_info_msg	print all front end state information
slurm_print_front_end_table	print state information for one front end node
slurm_sprint_front_end_table	output state information for one front end node
slurm_update_front_end		update state of front end node


Changed the following API's
===========================