@@ -129,6 +129,7 @@ select_jobdata_type
 	SELECT_JOBDATA_PTR	 /* data-> select_jobinfo_t *jobinfo */
 	SELECT_JOBDATA_BLOCK_PTR /* data-> bg_record_t *bg_record */
 	SELECT_JOBDATA_DIM_CNT   /* data-> uint16_t dim_cnt */
+	SELECT_JOBDATA_BLOCK_NODE_CNT	/* data-> uint32_t block_cnode_cnt */
 
 select_nodedata_type
 	SELECT_NODEDATA_PTR     /* data-> select_nodeinfo_t *nodeinfo */
